public/stylesheets/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --primary: #2d383a;
  --accent-blue: #189ad3;
  --dark: #000;
  --light: #fff;
  --neutral: #eeeeee;
  --accent-green: #4dc884;
  --accent-red: #ff4d4d;
}

body {
  position: relative;
  margin: 0;
  font-family: 'Poppins', sans-serif;
  min-height: 100vh;
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(226, 232, 240,1)'/%3E%3Ccircle cx='40' cy='20' r='1' fill='rgba(226, 232, 240,1)'/%3E%3Ccircle cx='0' cy='20' r='1' fill='rgba(226, 232, 240,1)'/%3E%3Ccircle cx='20' cy='40' r='1' fill='rgba(226, 232, 240,1)'/%3E%3Ccircle cx='20' cy='0' r='1' fill='rgba(226, 232, 240,1)'/%3E%3Ccircle cx='38' cy='2' r='1' fill='%23ecc94b'/%3E%3Ccircle cx='2' cy='38' r='1' fill='%23ecc94b'/%3E%3Ccircle cx='38' cy='38' r='1' fill='%23ecc94b'/%3E%3Ccircle cx='2' cy='2' r='1' fill='%23ecc94b'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
}

img {
  max-width: 100%;
  height: 100%;
  vertical-align: middle;
  object-fit: cover;
}

ul,
li {
  list-style: none;
  padding: 0;
  margin: 0;
}

a {
  font-weight: 900;
}

footer {
  text-align: center;
  position: absolute;
  width: 100%;
  bottom: 0;
}

.date_diff {
  color: var(--accent-blue);
}

.btn-submit {
  cursor: pointer;
  border: none;
  text-transform: uppercase;
  font-size: 19px;
  padding: 0.5rem 1rem;
  border-radius: 12px;
  background-color: var(--accent-green);
  color: var(--light);
  text-decoration: none;
  border-bottom: 5px solid lightblue;
}

.btn-submit:hover {
  filter: brightness(1.1);
}

.container {
  width: 90%;
  max-width: 1200px;
  margin: 0 auto;
  /* added for nav-toggle positioning */
  position: relative;
}

.row {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/*  HEADER */
header {
  padding: 20px 10%;
  background-color: var(--primary);
  position: sticky;
  top: 0;
  z-index: 2;
}

.logo {
  cursor: pointer;
  height: 3rem;
  width: auto;
}

.nav-toggle {
  cursor: pointer;
  border: 0;
  width: 3em;
  height: 3em;
  padding: 0em;
  border-radius: 50%;
  background: gray;
  transition: opacity 250ms ease;

  position: absolute;
  right: 0;
}

.nav-toggle:focus,
.nav-toggle:hover {
  opacity: 0.75;
}

.hamburger {
  width: 50%;
  position: relative;
}

.hamburger,
.hamburger::before,
.hamburger::after {
  display: block;
  margin: 0 auto;
  height: 3px;
  background: var(--light);
}

.hamburger::before,
.hamburger::after {
  content: '';
  width: 100%;
}

.hamburger::before {
  transform: translateY(-6px);
}

.hamburger::after {
  transform: translateY(3px);
}

nav {
  visibility: hidden;
  height: 0;
  text-align: center;
  position: relative;
}

.nav--visible {
  visibility: visible;
  height: auto;
  position: relative;
}

.nav__links {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
  padding: 0 10px;
}

/* make whole container clickable */
.nav__link a {
  display: block;
  position: relative;
  z-index: 1;
  padding: 0.5em;
  margin: -0.5em;
}

.nav__link {
  background-color: var(--light);
  width: 70%;
  border-radius: 0.5rem;
  padding: 0.5rem;
}

.nav__link > a {
  color: var(--dark);
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 600;
}

.nav__links > *:hover {
  filter: brightness(0.8);
}

/* main content */
section {
  padding: 1.5rem 0;
  text-align: center;
  font-size: 17px;
}

section h1 {
  font-size: 30px;
  font-weight: 900;
}
.home-links {
  margin-top: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  font-size: 19px;
}
.home-link {
  padding: 0.5rem 1rem;
  border-radius: 12px;
  background-color: var(--accent-blue);
  color: var(--light);
  text-decoration: none;
  border-bottom: 5px solid lightblue;
}
.home-link:hover {
  filter: brightness(1.3);
}
.recents {
  padding-top: 0;
  text-align: center;
  background-color: rgba(109, 161, 234, 0.3);
  border-radius: 16px;
  margin-bottom: 5rem; /*quick fix to make space for footer*/
}
.recents__container {
  margin: 0 auto;
  padding: 1rem;
}
.recents__card {
  background-color: var(--light);
  border: 1px solid #bacdd8;
  margin-bottom: 0.5rem;
  border-radius: 12px;
  position: relative;
}
.card_img_container {
  width: clamp(200px, 50vw, 50%);
  height: 150px;
  margin: 0 auto;
  padding: 0.5rem;
}
.card__details {
  padding: 0.5rem;
}
.check-btn {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 20px;
  opacity: 0;
}
.recents__card:hover > :not(a) {
  opacity: 0.2;
}
.recents__card:hover .check-btn {
  opacity: 1;
  transition: all 0.5s;
}
.tag {
  padding: 0.1rem;
  border-radius: 5px;
  background-color: var(--accent-blue);
  color: var(--light);
}

/* ITEMS */
table {
  margin-top: 1rem;
  margin-bottom: 2rem;
  border-collapse: collapse;
  font-size: clamp(9px, 2vw, 19px);
}
table tr:hover {
  transition: all 0.3s;
  background-color: #ffdc00;
}
th {
  background-color: var(--dark);
  color: var(--light);
  padding: 0.5rem 0;
  text-transform: uppercase;
}
tr:nth-child(even) {
  background-color: var(--neutral);
}
tr:nth-child(odd) {
  background-color: var(--light);
}
td {
  padding: 0.5rem 0.2rem;
}

/* ITEM FORM */
fieldset {
  width: 500px;
  max-width: 80vw;
  text-align: left;
  border-color: var(--accent-blue);
  border-radius: 16px;
  margin-bottom: 2rem;
}
legend {
  font-size: 20px;
  font-weight: 900;
}
.form-group {
  margin-bottom: 0.5rem;
}
label {
  display: block;
  font-weight: 700;
}

input,
textarea {
  padding: 0.5rem;
  width: 100%;
}

/* Category */
.category-list {
  margin-top: 2rem;
}

.style-link {
  text-decoration: none;
  color: var(--accent-blue);
  padding: 0.2rem 0.7rem;
  border-radius: 16px;
}

.style-link:hover {
  background-color: whitesmoke;
}

/* ITEM DETAIL */
.item_container {
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: rgba(245, 245, 245, 0.6);
  border-radius: 16px;
  padding: 0.5rem 0;
  margin-bottom: 2rem;
}
.img_container {
  width: clamp(400px, 30vw, 60%);
  height: 300px;
}

.item_summary {
  width: clamp(400px, 30vw, 60%);
  text-align: left;
}

/*CATEGORY DETAIL*/
.category_detail {
  font-size: clamp(12px, 2.75vw, 19px);
}
.category_items {
  text-align: left;
}

.category_delete > div {
  text-align: left;
  font-size: clamp(12px, 2.75vw, 19px);
  margin-bottom: 0.5rem;
}

.category_form {
  max-width: 100%;
  width: 50vw;
}

/* utils */
a + a {
  margin-left: 1rem;
}

.delete {
  background-color: var(--accent-red);
}

@media (min-width: 800px) {
  .nav-toggle {
    display: none;
  }

  nav {
    visibility: visible;
    height: auto;
    margin-top: 0;

    position: relative;
    width: 70%;
  }

  .flex-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .nav__links {
    flex-direction: row;
  }

  .home-links {
    flex-direction: row;
  }
  .recents__container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    max-width: 1200px;
  }
  .item_container {
    flex-direction: row;
  }
}

